Config redis for CartService

--- a/CartService/appsettings.Development.json
+++ b/CartService/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Redis": {
+    "ConnectionString": "http://localhost:6379"
   }
 }
