--- a/CartService/appsettings.Development.json
+++ b/CartService/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "Redis": {
     "ConnectionString": "http://localhost:6379"
-  }
+  },
+  "UserServiceEndpoint": "http://localhost/user/api/users"
 }
