--- a/CartService/appsettings.json
+++ b/CartService/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "Redis": {
     "ConnectionString": "redis-container:6379"
-  }
+  },
+  "UserServiceEndpoint": "http://userservice:8080/api/users"
 }
