--- a/OrderService/appsettings.json
+++ b/OrderService/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "UserServiceEndpoint": "http://userservice:8080/api/users"
 }
