--- a/ProductService/appsettings.Development.json
+++ b/ProductService/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "UserServiceEndpoint": "http://localhost/user/api/users"
 }
