--- a/ProductService/appsettings.json
+++ b/ProductService/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "UserServiceEndpoint": "http://userservice:8080/api/users"
 }
