Finish cart service

--- a/CartService/appsettings.Development.json
+++ b/CartService/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "Redis": {
-    "ConnectionString": "http://localhost:6379"
+    "ConnectionString": "localhost:6379"
   },
   "UserServiceEndpoint": "http://localhost/user/api/users"
 }
