--- a/CartService/CartService.csproj
+++ b/CartService/CartService.csproj
@@ -7,13 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.37" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="Common\" />
     <Folder Include="Mapper\" />
     <Folder Include="Ultils\" />
   </ItemGroup>
