--- a/CartService/appsettings.json
+++ b/CartService/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "Redis": {
-    "ConnectionString": "redis-container:6379"
+    "ConnectionString": "redis:6379"
   },
   "UserServiceEndpoint": "http://userservice:8080/api/users"
 }
