--- a/OrderService/appsettings.Development.json
+++ b/OrderService/appsettings.Development.json
@@ -5,5 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "UserServiceEndpoint": "http://localhost/user/api/users"
+  "UserServiceEndpoint": "http://localhost:8080/api/users"
 }
