Update endponts buyer and seller stats

--- a/OrderService/appsettings.json
+++ b/OrderService/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "UserServiceEndpoint": "http://userservice:8080/api/users"
+  "UserServiceEndpoint": "http://userservice:8080/api/users",
+  "ProductServiceEndpoint": "http://productservice:8080/api/products"
 }
