--- a/OrderService/appsettings.Development.json
+++ b/OrderService/appsettings.Development.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "UserServiceEndpoint": "http://localhost:8080/api/users"
+  "UserServiceEndpoint": "http://localhost:8080/api/users",
+  "ProductServiceEndpoint": "http://localhost:8080/api/products"
 }
