--- a/ChatService/appsettings.Development.json
+++ b/ChatService/appsettings.Development.json
@@ -4,5 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "UserServiceEndpoint": "http://localhost:8080/api/users",
+  "ProductServiceEndpoint": "http://localhost:8080/api/products"
 }
