--- a/ChatService/appsettings.json
+++ b/ChatService/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "UserServiceEndpoint": "http://userservice:8080/api/users",
+  "ProductServiceEndpoint": "http://productservice:8080/api/products"
 }
