Config for notification

--- a/OrderService/appsettings.json
+++ b/OrderService/appsettings.json
@@ -7,5 +7,7 @@
   },
   "AllowedHosts": "*",
   "UserServiceEndpoint": "http://userservice:8080/api/users",
-  "ProductServiceEndpoint": "http://productservice:8080/api/products"
+  "ProductServiceEndpoint": "http://productservice:8080/api/products",
+  "RabbitMQHost": "rabbitmq",
+  "RabbitMQPort": "5672"
 }
