--- a/OrderService/appsettings.Development.json
+++ b/OrderService/appsettings.Development.json
@@ -6,5 +6,7 @@
     }
   },
   "UserServiceEndpoint": "http://localhost:8080/api/users",
-  "ProductServiceEndpoint": "http://localhost:8080/api/products"
+  "ProductServiceEndpoint": "http://localhost:8080/api/products",
+  "RabbitMQHost": "rabbitmq",
+  "RabbitMQPort": "5672"
 }
