--- a/OrderService/appsettings.Development.json
+++ b/OrderService/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "UserServiceEndpoint": "http://localhost:8080/api/users",
   "ProductServiceEndpoint": "http://localhost:8080/api/products",
-  "RabbitMQHost": "rabbitmq",
+  "RabbitMQHost": "localhost",
   "RabbitMQPort": "5672"
 }
